fix icons not showing on mobile menu bug

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 // remove social items for small/mobile view
-.social-media {
+body > footer > .social-media {
     display: none;
 }
 
